# Hearsay-DragonHack2022

./: README.md  pyproject.toml
hearsay/: main.py
hearsay/assembly/: manager.py
hearsay/av_management/: video_mgmt.py
hearsay/cloud_translation/: google.py
hearsay/subtitles/: srtGen.py  vtt.py
hearsay/web_page/: index.html  style.css
web_page/: bootstrap.css  index.html
